# network_helper

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  rebuild.sh  test_env_loading.py  verify_app.py  verify_auth.py  verify_clean_flash_path.py  verify_parallelism.py  verify_queue_clear_step1.py  verify_queue_clear_step2.py  verify_strict_auth.py  verify_template_paths.py
app/: main.py
app/api/: endpoints.py
app/core/: executor.py
app/db/: models.py  session.py
frontend/: app.js  index.html  style.css
tasks/: __connection_helpers.py  __helpers.py  base_task.py  cancel_schedule_task.py  netbox_graphql.py  operations.py  precheck_task.py  refresh_device.py  upgrade_auto_task.py  upgrade_task.py  upgrade_task_manual_trigger.py
tasks/templates/: event_applet_clean_flash.txt  ios_download.j2  ios_file_install.j2
